Update com novas funcionalidades operacionais. Em falta: Ratings do filme e botão de alugar a incrementar o carrinho de compras.

--- a/app/movie_detail/movie-detail-detail/movie-info.tpl.html
+++ b/app/movie_detail/movie-detail-detail/movie-info.tpl.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-5">
       <div class="movie-poster">
-        <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97400&w=400&h=500" class="w-100">
+        <img src="{{movieInfoWrapperScope.poster}}" class="w-100">
       </div>
       <!--Rent button component aqui-->
       <rent-button></rent-button>
@@ -10,7 +10,7 @@
     <div class="col-7 text-color">
       <div class="movie-trailer">
         <ng-youtube-embed
-          video="scopeMovieInfoWrapper.VideoURL"
+          video="movieInfoWrapperScope.videoURL"
           autoplay="false"
           color="white"
           disablekb="true"
@@ -18,11 +18,13 @@
         </ng-youtube-embed>
       </div>
       <div class="movie-detail-detail">
-        <h4 class="movie-title">titulo</h4>
-        <small class="text-italic">categoria</small>
-        <p class="movie-plot">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, fuga nemo dolore error asperiores nesciunt in ea cum odit animi explicabo. Corrupti cum voluptate commodi perspiciatis labore facilis quae quisquam!</p>
+        <h4 class="movie-title">{{movieInfoWrapperScope.nome}}</h4>
+        <small class="text-italic">{{movieInfoWrapperScope.ano}}</small>
+        <p class="movie-plot">{{movieInfoWrapperScope.plot}}</p>
         <!-- cast Faces component aqui -->
-        <cast-faces></cast-faces>
+        <div class="movie-cast">
+        <cast-face  ng-repeat="x in movieInfoWrapperScope.elenco" nome={{x.nome}}></cast-face>
+        </div>
         <div class="movie-rate">rates</div>
         <!-- <div ng-view></div> -->
       </div>
