--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,9 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
+
+
+
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
@@ -60,6 +63,8 @@
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
+
+
   <!--header wrapper component-->
   <script src="header/header.module.js"></script>
   <script src="header/header.component.js"></script>
@@ -72,6 +77,7 @@
   <!--movie detail wrapper component-->
   <script src="movie_detail/movie_detail.module.js"></script>
   <script src="movie_detail/movie_detail.component.js"></script>
+
       <!-- Movie List Component -->
       <script src="movie_detail/movie-list/movie-list.component.js"></script>
         <!--Movie Item Component -->
@@ -82,6 +88,10 @@
         <script src="movie_detail/movie-detail-detail/rentButton/rentButton.component.js"></script>
         <!-- Cast faces Component-->
         <script src="movie_detail/movie-detail-detail/castFaces/castFaces.component.js"></script>
+
+
+        <!--SERVIÇOS movie_detail-->
+        <script src="movie_detail/module_services/movieProvider.service.js"></script>
 
 
 
