Commit final - Todo o Projecto está a funcionar como era pretendido. Adicionou-se a funcionalidade do botão "alugar/desalugar" e também o incremento e decrescimo do valor no carrinho de compras.
Código no componente "rentButton" e criação do serviço "rental.service.js"

--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,9 @@
         <!--SERVIÇOS movie_detail-->
         <script src="movie_detail/module_services/movieProvider.service.js"></script>
 
+        <!--Serviços gerais-->
+        <script src="general_services/rental.service.js"></script>
+
 
 
   <!-- BOOTSTRAP -->
