--- a/app/movie_detail/movie-detail-detail/movie-info.tpl.html
+++ b/app/movie_detail/movie-detail-detail/movie-info.tpl.html
@@ -25,7 +25,7 @@
         <div class="movie-cast">
         <cast-face  ng-repeat="x in movieInfoWrapperScope.elenco" nome={{x.nome}}></cast-face>
         </div>
-        <div class="movie-rate">rates</div>
+        <!--<div class="movie-rate">rates</div>-->
         <!-- <div ng-view></div> -->
       </div>
     </div>
